--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -30,6 +31,7 @@
     "@types/node": "^18.15.11",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/uuid": "^9.0.1",
     "concurrently": "^8.0.1",
     "nodemon": "^2.0.22"
   }
