--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 API_PORT = 8081
 BASE_URL = http://localhost
-WHITE_LIST = ['http://localhost:4200', 'http://localhost:8081']
+WHITE_LIST = ['http://localhost:4200', 'http://localhost:8081', 'https://fe-e4k.vercel.app']
 DB_URL = mongodb+srv://quantu211154:SKc0WvGX8QSTuXna@e4k.qetiikg.mongodb.net
 E4K_REFRESH_TOKEN_NAME = E4K_REFRESH_TOKEN
 E4K_ACCESS_TOKEN_SECRET = asahudqwu6612uasoiodqw@
